--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,5 @@
-<%= react_component 'Users', { data: @users.to_json } %>
+<h3>Управление пользователями</h3>
+<br/>
+<div class="col-md-10 offset-md-1">
+  <%= react_component 'Users', { data: @users.to_json } %>
+</div>
